// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiSyntaxToFriendlySyntax should correctly read from \`and\` definition 1`] = `
"type t1
  relations
    define r1 as self and writer
"
`;

exports[`apiSyntaxToFriendlySyntax should correctly read from \`basic\` definition 1`] = `
"type t1
  relations
    define r1 as self
"
`;

exports[`apiSyntaxToFriendlySyntax should correctly read from \`but not\` definition 1`] = `
"type t1
  relations
    define r1 as self but not writer
"
`;

exports[`apiSyntaxToFriendlySyntax should correctly read from \`or\` definition 1`] = `
"type t1
  relations
    define r1 as self or writer
"
`;

exports[`apiSyntaxToFriendlySyntax should read a complex definition 4 1`] = `
"type folder
  relations
    define deleter as self
type doc
  relations
    define blocked_reader as self
    define delete as writer and deleter from parent
    define glass as writer
    define parent as self
    define read as reader or writer
    define reader as shared_reader but not blocked_reader
    define shared_reader as self
    define writer as self
"
`;

exports[`friendlySyntaxToApiSyntax() should be able to handle single character type 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "r": {
          "this": {},
        },
      },
      "type": "t",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should correctly read from \`and\` definition 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "r1": {
          "intersection": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "writer",
                },
              },
            ],
          },
        },
      },
      "type": "t1",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should correctly read from \`and\` definition with $ as prefix 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "$r1": {
          "intersection": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "$writer",
                },
              },
            ],
          },
        },
      },
      "type": "$t1",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should correctly read from \`basic\` definition 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "r1": {
          "this": {},
        },
      },
      "type": "t1",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should correctly read from \`but not\` definition 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "r1": {
          "difference": {
            "base": {
              "this": {},
            },
            "subtract": {
              "computedUserset": {
                "object": "",
                "relation": "writer",
              },
            },
          },
        },
      },
      "type": "t1",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should correctly read from \`from\` definition 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "share": {
          "tupleToUserset": {
            "computedUserset": {
              "object": "",
              "relation": "owner",
            },
            "tupleset": {
              "object": "",
              "relation": "parent",
            },
          },
        },
      },
      "type": "t1",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should correctly read from \`or\` definition 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "r1": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "writer",
                },
              },
            ],
          },
        },
      },
      "type": "t1",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should read a complex definition 1 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "deleter": {
          "this": {},
        },
      },
      "type": "folder",
    },
    {
      "relations": {
        "admin": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "creator",
                },
              },
            ],
          },
        },
        "blocked_reader": {
          "this": {},
        },
        "creator": {
          "this": {},
        },
        "delete": {
          "intersection": {
            "child": [
              {
                "computedUserset": {
                  "object": "",
                  "relation": "writer",
                },
              },
              {
                "tupleToUserset": {
                  "computedUserset": {
                    "object": "",
                    "relation": "deleter",
                  },
                  "tupleset": {
                    "object": "",
                    "relation": "parent",
                  },
                },
              },
            ],
          },
        },
        "glass": {
          "computedUserset": {
            "object": "",
            "relation": "writer",
          },
        },
        "parent": {
          "this": {},
        },
        "read": {
          "union": {
            "child": [
              {
                "computedUserset": {
                  "object": "",
                  "relation": "reader",
                },
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "writer",
                },
              },
            ],
          },
        },
        "reader": {
          "difference": {
            "base": {
              "computedUserset": {
                "object": "",
                "relation": "shared_reader",
              },
            },
            "subtract": {
              "computedUserset": {
                "object": "",
                "relation": "blocked_reader",
              },
            },
          },
        },
        "shared_reader": {
          "this": {},
        },
        "writer": {
          "this": {},
        },
      },
      "type": "doc",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should read a complex definition 2 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "admin": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "owner",
                },
              },
            ],
          },
        },
        "billing": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "admin",
                },
              },
            ],
          },
        },
        "content_editor": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "admin",
                },
              },
            ],
          },
        },
        "owner": {
          "this": {},
        },
        "viewer": {
          "intersection": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "admin",
                },
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "content_editand",
                },
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "billing",
                },
              },
            ],
          },
        },
      },
      "type": "website",
    },
  ],
}
`;

exports[`friendlySyntaxToApiSyntax() should read a complex definition 3 1`] = `
{
  "schema_version": "1.0",
  "type_definitions": [
    {
      "relations": {
        "admin": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "randy",
                },
              },
            ],
          },
        },
        "billing": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "admin",
                },
              },
            ],
          },
        },
        "content_editor": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "admin",
                },
              },
            ],
          },
        },
        "randy": {
          "this": {},
        },
        "viewer": {
          "union": {
            "child": [
              {
                "this": {},
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "admin",
                },
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "content_editor",
                },
              },
              {
                "computedUserset": {
                  "object": "",
                  "relation": "billing",
                },
              },
            ],
          },
        },
      },
      "type": "website",
    },
  ],
}
`;
